--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,17 @@
 [package]
-name = "thing"
+name = "metrolti"
 version = "0.1.0"
 authors = ["Skellora <pascal_noel@hotmail.com>"]
 
 [dependencies]
+iron = "0.6.0"
+router = "0.6.0"
+
+handlebars = "0.29.0"
+handlebars-iron = "0.26.0"
+
+serde = "1.0.0"
+serde_derive = "1.0.0"
+serde_json = "1.0.0"
+
+tungstenite = "0.5.0"
