--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ authors = ["Skellora <pascal_noel@hotmail.com>"]
 [dependencies]
 iron = "0.6.0"
 router = "0.6.0"
+mount = "0.4.0"
+staticfile = "0.5.0"
 
 handlebars = "0.29.0"
 handlebars-iron = "0.26.0"
